==> erictissotdupont/WinCNC/Arduino/SAMD21/motor.cpp <==
#include "CNC.h"
#include "helper.h"
#include "motor.h"
#include "LCD.h"
#include "UART.h"
#define RAMP_TIME     400000L
#define MIN_SPEED     60L
#define MAX_SPEED     180L // 360L
#define IMP_TO_NS     24000L
#define MIN_STEP      ( IMP_TO_NS / MIN_SPEED )
#define MAX_STEP      ( IMP_TO_NS / MAX_SPEED )
#define AVG_STEP      (( MIN_STEP + MAX_STEP ) / 2 )
#define STEP_RANGE    ( MIN_STEP - MAX_STEP )
#define STEP_ACC      (( 256 * STEP_RANGE ) / (( RAMP_TIME / AVG_STEP ) - 1 ))
#define MAX_BACKSTEPS 2000

void Motor::Reset( )
{
  curPos = 0;
  curDir = 0;
  toggle = 0;
  moveLength = 0;
  moveStep = 0;
  moveDuration = 0;

  pinMode( stepPin, OUTPUT );
  digitalWrite(stepPin, LOW );
  pinMode( dirPin, OUTPUT );
  digitalWrite(dirPin, LOW );
#ifdef TEST_LIMITS
  pinMode( endPin, INPUT );
#endif
}

void Motor::SetDirection( int8_t d )
{
  curDir = d;
  digitalWrite( dirPin, d < 0 ? LOW : HIGH );
}

long Motor::InitMove( int32_t s, uint32_t t )
{
  int32_t d = swap;
  
  // Backward direction
  if( s < 0 ) { 
    d = -swap;
    s = -s; 
  }
  
  moveStep = 0;
  moveLength = s;
  moveDuration = t;
  
  if( s > 0 )
  {
    // Are we changing direction
    if( curDir != d )
    {
      SetDirection( d );
      if( toggle )
      { 
        // Very important. This is to avoid missing a step when changing direction
        // when the stepper PIN is high. Toggle in order to make sure the motor
        // controler does not miss a step. 
        digitalWrite( stepPin, LOW );
        delay( 1 );
        digitalWrite( stepPin, HIGH );
        delay( 1 );
      }
      else delay( 2 );
    }    
    // Linear motion (G1)
    if( moveDuration )
    {
      stepDuration = t / s;
    }
    // Rapid positionning (G0)
    else
    {
      stepDecrement = 0; 
      stepDuration = IMP_TO_NS / MIN_SPEED;
      decelDist = moveLength;      
    }
  }
  else 
  {
    stepDuration = -1;
    // Return negative value to indicate no motion
    decelDist = 0;    
  }
  return stepDuration;
}

void Motor_Move( int32_t x, int32_t y, int32_t z, uint32_t d )
{
  uint32_t s;
  uint32_t count = 0;
  int32_t tX,tY,tZ;

  // DebugPrint( "Move %d,%d,%d in %d)\n", x,y,z,d );

  // If in error state, dot not move
  if( g_error != 0 )
  {
    return;
  }
  
  // No movement means dwell (GCode "P")
  if( x==0 && y==0 && z==0 )
  {
    // d is in microseconds
    delay( d / 1000 );
    return;
  }
  
  // This calculates the interval between steps for each axis and returns the time
  // to wait until the first move needs to occur (-1 if no move necessary).
  tX = X.InitMove( x, d );
  tY = Y.InitMove( y, d );
  tZ = Z.InitMove( z, d ); 
  
#ifdef TEST_TIME
  uint32_t start = micros();
  g_debug[2] = start-g_tSpent;
#endif
  
  do
  {
    // Finds which of the non negative wait times is the shortest.
    s = minOf3( tX, tY, tZ );
              
    // Remove the wait time from each axis. At least one should become zero.
    tX = tX - s;
    tY = tY - s;
    tZ = tZ - s;
    
#ifdef TEST_TIME 
    // This skip the delay and allow to mesure the processing time of the move
    // routine (calculated at the end)
    s = 0;
#endif
 
    // If we have at least 150uS to wait, perform background
    // update tasks
    if( s > 150 )
    {
      // Alternate between LCD and UART
      if( count++ & 1 )
      {
        // Refresh the LCD screen (if enough time)
        LCD_UpdateTask( s - 150 );
      }
      else
      {
        // Read from UART and decode (one char at a time)
        UART_Task( );
      }
    }
    
    // Calculate how much time we spent processing since the last move pulse
    g_tSpent = micros() - g_tSpent;
    
    // If we still have time to wait
    if( s > g_tSpent )
    {
      s = s - g_tSpent;
      // When sleeping more than 16388 uS, documentation says don't use delayMicroseconds.
      if( s < 16000 )
      {
        if( s ) delayMicroseconds( s );
      }
      else 
      {
        delay( s / 1000 );
        delayMicroseconds( s % 1000 );
      }
    }
#ifndef TEST_TIME
    // Counts how many times move was late for making a motor pulse
    else g_debug[3]++;
#endif

    // For each axis where the time to move has been reached, move.
    // Save the duration to the next move or a negative value if the
    // axis has eached the end position.
    g_tSpent = micros();
    if( tX == 0 ) tX = X.Move( );
    if( tY == 0 ) tY = Y.Move( );    
    if( tZ == 0 ) tZ = Z.Move( );
    
  } while(( tX > 0 ) || ( tY > 0 ) || ( tZ > 0 ));
  
#ifdef TEST_TIME
  uint32_t finish = micros();
  g_debug[0] = (finish-start)/count;
  g_debug[1] = count;
#endif

}
