==> erictissotdupont/WinCNC/ESP32_Motor/main/Motor.cpp <==
  #include <stdlib.h>
  #include <cstring>
  #include "freertos/FreeRTOS.h"
  #include "driver/gpio.h"
  #include "driver/gptimer.h"
  #include "esp_log.h"
  #include "CNC.h"
#define STEP_PULSE_US 100 // Duration of the motor step pulse
#define RAMP_SHIFT    19 // 19=524ms
#define RAMP_TIME     (1L << RAMP_SHIFT)
#define MIN_SPEED     15L
#define MAX_SPEED     150L
#define STEP_FROM_RAMP( Min, Max, t ) ( Min - ((( Min - Max ) * t ) >> RAMP_SHIFT))
#define SPEED_TO_STEP( sbi, s ) ( 60000000L / ((sbi) * (s)))
#define NO_STEP_TIME  (-1ULL)
#define OUTPUT 0
#define LOW 0
#define HIGH 1

void Motor::Reset( )
{
  curPos = 0;
  curDir = 0;
  moveLength = 0;
  moveStep = 0;
  moveDuration = 0;
}

void DualMotor::Reset( )
{
  pinMode( stepPin2, OUTPUT );
  digitalWrite(stepPin2, LOW );
  pinMode( dirPin2, OUTPUT );
  digitalWrite(dirPin2, LOW );
  Motor::Reset( );
}

void Motor::SetDirection( int d )
{
  if( !reverseDir )
  {
    gpio_set_level( dirPin, d < 0 ? LOW : HIGH );
    //digitalWrite( dirPin, d < 0 ? LOW : HIGH );
  }
  else
  {
    gpio_set_level( dirPin, d < 0 ? HIGH : LOW );
    //digitalWrite( dirPin, d < 0 ? HIGH : LOW );
  }
  
  if( curDir != d )
  {
    curDir = d;
  }
}

void DualMotor::SetDirection( int d )
{
  if( !reverseDir )
  {
    gpio_set_level( dirPin2, d < 0 ? LOW : HIGH );
    //digitalWrite( dirPin2, d < 0 ? LOW : HIGH );
  }
  else
  {
    gpio_set_level( dirPin2, d < 0 ? HIGH : LOW );
    //digitalWrite( dirPin2, d < 0 ? HIGH : LOW );
  }
  Motor::SetDirection( d );
}

uint64_t Motor::InitMove( long s, unsigned long t, uint64_t now )
{
  int d = 1;
  
  if( stepLevel == HIGH )
  {
    ESP_LOGE( TAG, "Previous move did not clear the pulse" );
    assert(false);
  }

/*
  if( s == 0 && manual )
  {
    if( manual > -100 && manual < 100 )
    {
      unsigned long now = micros( );
      if( now > nextSlowStep )
      {
        nextSlowStep = now + 100000;
        accManual += manual;
        if( accManual < -100 || accManual > 100 )
        {
          if( accManual < 0 ) s = -1; else s = 1;
          accManual = 0;
        }
      }
    }
    else
    {
      if( manual > 0 ) s = ( manual - 100 ); else s = manual + 100;
    }
    t = 100000;
  }
*/  
  // Backward direction
  if( s < 0 ) 
  { 
    d = -1;
    s = -s; 
  }

  // If we do not return "NO_STEP_TIME" the move will
  // occur no matter what.
  
  moveLength = s;
  moveDuration = t;
  nextStepTime = 0;
  
  if( s > 0 )
  {
    SetDirection( d );
    // Linear motion (G1)
    if( moveDuration )
    {
      // Calculate the step duration in uS with 32:32bit precision
      stepDuration = t / moveLength;
      stepModulo = t % moveLength;
      stepAcc = 0;
    }
    // Rapid positionning (G0)
    else
    {
      stepDuration = minSpeedStep;
      decelDist = moveLength;
      decelStart = 0;
    }
    moveStep = 1;
  }
  else 
  {
    moveStep = 0;
    nextStepTime = NO_STEP_TIME;
    return NO_STEP_TIME;
  }
  
  nextStepTime = stepDuration + now;
  return stepDuration;
}

  void MotorMove( long x, long y, long z, long d )
  { 
    g_MoveStart = 0;

    // This calculates the interval between steps for each axis and returns the time
    // to the first step needs to occur ( NO_STEP_TIME if no move necessary).
    X.InitMove( x, d, 0 );
    Y.InitMove( y, d, 0 );
    Z.InitMove( z, d, 0 );
    
    PrepareNextStep( 0 );
    
    WaitForMotorIdle( );
       
       
   /*
    // No movement means dwell (GCode "P")
    if( x==0 && y==0 && z==0 )
    {
      if( d != 0 )
      {
        while( g_MoveStart + d >= micros( ))
        {
          UART_Task( );
        }     
        
        // Just wait...
        //WaitTillItsTime( d );
        g_MoveStart += d;
      }
      return;
    }

    //Serial.printf("Start Move %ld,%ld,%ld\n", x,y,z );

    do
    {

    } while( 1 );

    if( d != 0 )
    {
      g_MoveStart += d;
    }
    else
    {
      g_MoveStart = 0;
    }
    */
  }
